archive/scale-catalog/incubator/atuin/3.0.3/app-changelog.md


## [atuin-3.0.3](https://github.com/truecharts/charts/compare/atuin-2.1.2...atuin-3.0.3) (2024-04-30)

### Chore



- bump charts to ensure new icons are released

- bump common

- bump everything to release new doc pages

- update groups html ([#21121](https://github.com/truecharts/charts/issues/21121))

- bump charts to release new docs to fix broken links

- bump everything to regenerate readme's and site index

- update ignored updates to v20.3.6[@27edfed](https://github.com/27edfed) by renovate ([#20602](https://github.com/truecharts/charts/issues/20602))

- update ignored updates to v20.2.13[@c6e8fea](https://github.com/c6e8fea) by renovate ([#20139](https://github.com/truecharts/charts/issues/20139))

- update ignored updates to v20.3.9[@370bb36](https://github.com/370bb36) by renovate ([#20917](https://github.com/truecharts/charts/issues/20917))

- update ignored updates to v20.3.8[@52f4118](https://github.com/52f4118) by renovate ([#20876](https://github.com/truecharts/charts/issues/20876))

- update ignored updates to v20.3.11[@dae6129](https://github.com/dae6129) by renovate ([#21059](https://github.com/truecharts/charts/issues/21059))

- update ignored updates to v20.3.7[@8cf9fc9](https://github.com/8cf9fc9) by renovate ([#20777](https://github.com/truecharts/charts/issues/20777))

- update ignored by renovate (patch) ([#21171](https://github.com/truecharts/charts/issues/21171))

- update ignored updates to v20.3.5[@aedd88a](https://github.com/aedd88a) by renovate ([#20536](https://github.com/truecharts/charts/issues/20536))

- update ignored updates to v20.3.4[@d7e1b23](https://github.com/d7e1b23) by renovate ([#20531](https://github.com/truecharts/charts/issues/20531))

- update ignored updates to v20.3.3[@3876ba5](https://github.com/3876ba5) by renovate ([#20488](https://github.com/truecharts/charts/issues/20488))

- lock file maintenance ignored by renovate ([#20393](https://github.com/truecharts/charts/issues/20393))

- update ignored updates to v20.3.10[@c2f262c](https://github.com/c2f262c) by renovate ([#21034](https://github.com/truecharts/charts/issues/21034))

- update ignored updates to v20.2.12[@944bc78](https://github.com/944bc78) by renovate ([#20094](https://github.com/truecharts/charts/issues/20094))

- update ignored by renovate (patch) ([#19878](https://github.com/truecharts/charts/issues/19878))

- update ignored updates to v20.2.9[@10fd6c5](https://github.com/10fd6c5) by renovate ([#19851](https://github.com/truecharts/charts/issues/19851))

- update ignored updates to v20.2.5[@ecb8a33](https://github.com/ecb8a33) by renovate ([#19820](https://github.com/truecharts/charts/issues/19820))

- update ignored updates to v20.2.4[@5e42f58](https://github.com/5e42f58) by renovate ([#19734](https://github.com/truecharts/charts/issues/19734))

- update ignored updates to v20.2.3[@06e462e](https://github.com/06e462e) by renovate ([#19675](https://github.com/truecharts/charts/issues/19675))

- update ignored updates to v20.2.2[@f7d0b92](https://github.com/f7d0b92) by renovate ([#19433](https://github.com/truecharts/charts/issues/19433))

- lock file maintenance ignored by renovate ([#19370](https://github.com/truecharts/charts/issues/19370))

- update ignored by renovate (patch) ([#19333](https://github.com/truecharts/charts/issues/19333))

### Chore



- rework SCALE catagories/groups to match helm and remove deprecated charts ([#21111](https://github.com/truecharts/charts/issues/21111))

### Feat



- Add VolSync support and move CNPG backup credentials on SCALE ([#21443](https://github.com/truecharts/charts/issues/21443))

### Fix



- fixup all chart volsync/credentials settings

- adapt for common cnpg/volsync pathing changes ([#21445](https://github.com/truecharts/charts/issues/21445))

- replace serviceexpert with externalinterfaces/networking-group in the SCALE GUI ([#21154](https://github.com/truecharts/charts/issues/21154))